Fixed bug #70228 (Memleak if return in finally block)